# vton3d-bat

./: .gitattributes  .gitignore  README.md  create_envs.sh  create_train_env.sh  pyproject.toml  run_experiments.sh  run_exps_pipeline.sh  run_exps_promptExp01.sh  run_pipeline.sh  run_pipeline_wandb_sweep.sh  scicore_create_envs.sh  scicore_run_fp_vs_4bit.sh  scicore_run_pipeline.sh  scicore_run_pipeline_num_frames.sh  scicore_view_gsplat.sh  train_qwen.sh  view_gsplat.sh
Sapiens-Pytorch-Inference/sapiens_inference/: common.py  depth.py  normal.py  pose.py  predictor.py  segmentation.py
configs/: vton_pipeline.yaml  vton_pipeline_new.yaml  vton_pipeline_sweep.yaml
configs/sweeps/: count_frames_sweep.yaml  vggt_sweep.yaml
gsplat/examples/: gsplat_trainer_pipe.py  requirements.txt  scicore_requirements.txt  simple_trainer.py  utils.py
gsplat/examples/datasets/: colmap.py
gsplat/examples/drgs_utils/: loss_utils.py
lora_train/DiffSynth-Studio/: pyproject.toml
lora_train/DiffSynth-Studio/diffsynth/diffusion/: runner.py  training_module.py
lora_train/DiffSynth-Studio/diffsynth/geometry/: __init__.py  vggt_align_loss.py
lora_train/DiffSynth-Studio/examples/qwen_image/model_training/: train.py
lora_train/DiffSynthStudio/: pyproject.toml
lora_train/DiffSynthStudio/diffsynth/diffusion/: runner.py
lora_train/DiffSynthStudio/examples/qwen_image/model_training/: train.py
notebooks/: background_segmentation.ipynb  experiments.ipynb  qwen_test.ipynb  run_pipeline.ipynb
notebooks/experiments/: 01_fp_vs_4bit_qwen_experiment_analysis.ipynb  03_num_frames_experiment.ipynb  04_optical_flow_experiment_analysis.ipynb  06_depth_loss_experiment_analysis.ipynb
scripts/: extract_frames.py  gaussian_trainer.py  generate_gt.py  make_train_images.py  qwen_seed_exp.py  vggt_colmap.py  vggt_eval.py
vton3d/pipeline/: run_gsplat.py  run_pipeline.py  run_sweep.py
vton3d/qwen/: run_qwen.py
vton3d/utils/: background_segmentation.py  depth_maps.py  extract_frames.py  masked_optical_flow.py  qwen_eval.py  test.py  utils.py  vggt_eval.py  vggt_reconstruct.py
vton3d/vggt/: run_vggt.py  vggt_.py
